# timetracker-dbus

./: Cargo.toml  Makefile  README.md
example/: get-status.sh  set-status.sh
pkg/: timetracker-dbus.spec
src/: data.rs  handlers.rs  main.rs
