[package]
name = "timetracker-dbus"
version = "0.1.0"
authors = ["Samuli Suortti <samuli.suortti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.0"
dbus-crossroads = "0.3.0"
dbus-tree = "0.9.0"
